Electronic Gaspedal.cydsn/BUILD.log
--------------- Build Started: 05/21/2025 21:56:43 Project: Electronic Gaspedal, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\abhim\AppData\Local\Cypress Semiconductor\PSoC Creator\4.4" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "D:\psoc-workspace\Git\ElectronicGaspedal\Electronic Gaspedal.cydsn\Electronic Gaspedal.cyprj" -d CY8C5888LTQ-LP097 -s "D:\psoc-workspace\Git\ElectronicGaspedal\Electronic Gaspedal.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I.\source\asw -I.\source\bsw -I.\source\rte -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c source\asw\main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I.\source\asw -I.\source\bsw -I.\source\rte -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/swc_brakelight_control.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c source\bsw\swc_brakelight_control.c -o .\CortexM3\ARM_GCC_541\Debug\swc_brakelight_control.o
In file included from .\source\rte/rte.h:82:0,
                 from source\bsw\swc_brakelight_control.c:14:
.\source\rte/rte_types.h:46:0: warning: "GetResource" redefined
     #define GetResource(A)
 ^
In file included from Generated_Source\PSoC5/ErikaOS_ee_api.inc:73:0,
                 from Generated_Source\PSoC5/ErikaOS_ee.h:129,
                 from Generated_Source\PSoC5/project.h:22,
                 from source\bsw\swc_brakelight_control.c:12:
Generated_Source\PSoC5/ErikaOS_ee_oo_api.inc:136:0: note: this is the location of the previous definition
 #define GetResource               EE_oo_GetResource
 ^
In file included from .\source\rte/rte.h:82:0,
                 from source\bsw\swc_brakelight_control.c:14:
.\source\rte/rte_types.h:47:0: warning: "ReleaseResource" redefined
     #define ReleaseResource(A)
 ^
In file included from Generated_Source\PSoC5/ErikaOS_ee_api.inc:73:0,
                 from Generated_Source\PSoC5/ErikaOS_ee.h:129,
                 from Generated_Source\PSoC5/project.h:22,
                 from source\bsw\swc_brakelight_control.c:12:
Generated_Source\PSoC5/ErikaOS_ee_oo_api.inc:140:0: note: this is the location of the previous definition
 #define ReleaseResource           EE_oo_ReleaseResource
 ^
In file included from .\source\rte/sc_speed.h:27:0,
                 from .\source\rte/sp_signalpool.h:23,
                 from source\bsw\swc_brakelight_control.c:25:
.\source\rte/sc_speed_type.h:35:3: error: #error "Provide your data structure"
  #error "Provide your data structure"
   ^
.\source\rte/sc_speed_type.h:41:2: error: #error "Provide a sensible init value"
 #error "Provide a sensible init value"
  ^
In file included from .\source\rte/sc_joystick.h:27:0,
                 from .\source\rte/sp_signalpool.h:24,
                 from source\bsw\swc_brakelight_control.c:25:
.\source\rte/sc_joystick_type.h:35:3: error: #error "Provide your data structure"
  #error "Provide your data structure"
   ^
.\source\rte/sc_joystick_type.h:41:2: error: #error "Provide a sensible init value"
 #error "Provide a sensible init value"
  ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 05/21/2025 21:56:51 ---------------
